# rust_bot

./: .gitignore  README.md
server/: .env  Cargo.toml
server/src/: handler.rs  main.rs
