[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.187"
serde_json = "1.0.105"
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
